--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
                 <li>Daily Digest</li>
                 <li>Design Tools</li>
                 <li>Tutorials</li>
-                <li>
-                    <button>
-                    subscribe
-                   </button>
-                </li>
+                <li><button>subscribe</button></li>
             </ul>
         </nav>
     </header>
