--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Minimal-Blog Template</title>
 </head>
 <body>
+    <section>
     <header>
         <img src="./Assets/Images/personally-logo.svg" alt="Blog Logo">
         <nav>
@@ -21,5 +22,18 @@
             </ul>
         </nav>
     </header>
+</section>
+<!-- Hero section -->
+ <section>
+    <div>
+        <span>👋</span>
+        <b>Meet Personally</b>
+    </div>
+    <h1>
+        Minimal blog template for creative expressions
+    </h1>
+    <p> 100% customisable and SEO-friendly blog template for personal and commercial purposes.
+        </p>
+ </section>
 </body>
 </html>
