hero/header section

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Assets/CSS/index.css">
     <title>Minimal-Blog Template</title>
 </head>
 <body>
-    <section>
+    <section id="header-section">
     <header>
         <img src="./Assets/Images/personally-logo.svg" alt="Blog Logo">
         <nav>
-            <ul>
+            <ul id="nav-ul">
                 <li>Daily Digest</li>
                 <li>Design Tools</li>
                 <li>Tutorials</li>
@@ -24,15 +25,16 @@
     </header>
 </section>
 <!-- Hero section -->
- <section>
+ <section id="hero-section">
     <div>
         <span>👋</span>
         <b>Meet Personally</b>
     </div>
-    <h1>
+    <span id="span">
         Minimal blog template for creative expressions
-    </h1>
-    <p> 100% customisable and SEO-friendly blog template for personal and commercial purposes.
+    </span>
+    <br>
+    <p class="first-para"> 100% customisable and SEO-friendly blog template for personal and commercial purposes.
         </p>
  </section>
 </body>
