--- a/positioning.html
+++ b/positioning.html
@@ -15,5 +15,15 @@
         <div class="samples-4">Bottom left</div>
         <div class="samples-5">Bottom right</div>
     </div>
+
+    <!-- named character references.
+     &lt;p&gt;learning is fun&lt;/p&gt; <br>
+    &lt;p&gt;learning is fun&lt;/p&gt; -->
+
+    &#x20AC;
+    &#x03A9;
+    &#x3C;
+
+    
 </body>
 </html>
